<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Payments">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/paymentsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/payments"
            android:textSize="42dp"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="168dp" />

        <Button
            android:id="@+id/journalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="164dp"
            android:text="@string/readjournal"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/createGroupButton"
            android:layout_width="202dp"
            android:layout_height="50dp"
            android:layout_marginBottom="200dp"
            android:text="@string/create_group_button"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/createActivityButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/createActivityButton"
            android:layout_width="202dp"
            android:layout_height="50dp"
            android:layout_marginBottom="200dp"
            android:text="@string/create_activity_button"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/createGroupButton" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp"
            android:text="@string/tocreate"
            app:layout_constraintBottom_toTopOf="@+id/createGroupButton"
            app:layout_constraintStart_toStartOf="@+id/createGroupButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.991" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="16dp"
            android:text="@string/otherbuttons"
            app:layout_constraintBottom_toTopOf="@+id/journalButton"
            app:layout_constraintStart_toStartOf="@+id/journalButton" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="Groups"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="304dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="409dp"
            android:layout_height="159dp"
            tools:layout_editor_absoluteX="3dp"
            tools:layout_editor_absoluteY="325dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>